--- a/gray13__final_project.ipynb
+++ b/gray13__final_project.ipynb
@@ -250,11 +250,11 @@
         ")\n",
         "\n",
         "\n",
-        "monthly_revenue_trends_ = monthly_revenue.with_columns(\n",
+        "monthly_revenue_trends = monthly_revenue.with_columns(\n",
         "    pl.col(\"Year_Month\").dt.strftime(\"%Y-%m\").alias(\"Year_Month\")\n",
         ")\n",
         "\n",
-        "print(monthly_revenue_trends_)"
+        "print(monthly_revenue_trends)"
       ]
     },
     {
