--- a/gray13__final_project.ipynb
+++ b/gray13__final_project.ipynb
@@ -870,7 +870,7 @@
       ],
       "source": [
         "# Q5.3: Order size vs profitability\n",
-        "order_profitability = (items\n",
+        "order__size_profitability = (items\n",
         "    .join(products.select([\"sku\", \"price\"]), on=\"sku\", how=\"left\")\n",
         "    .join(supplies.select([\"sku\", \"cost\"]), on=\"sku\", how=\"left\")\n",
         "    .with_columns([\n",
@@ -883,7 +883,7 @@
         "    ])\n",
         "    .sort(\"order_size\"))\n",
         "\n",
-        "print(order_profitability)\n",
+        "print(order_size_profitability)\n",
         "\n",
         "\n",
         "plt.scatter(order_profitability[\"order_size\"], order_profitability[\"order_gross_margin\"])\n",
